# gpe

base/bluez-pin/: .cvsignore  ChangeLog  Makefile  Makefile.am  bluez-pin.c  bluez-pin.glade  bt-logo.xpm  configure.ac  control  dbus.c  gpe-dist.am  main.c  pin-dbus.c  pin-ui.c  ui.c
base/bluez-pin/debian/: changelog  control  copyright  rules
base/bluez-pin/familiar/: control  control1  postinst  postrm
base/bluez-pin/po/: af.po  bluez-pin.pot  cs.po  de.po  el.po  eo.po  fi.po  fr.po  ga.po  hu.po  id.po  ku.po  ms.po  nl.po  pl.po  pt_BR.po  rm.po  ro.po  ru.po  rw.po  sk.po  sl.po  sr.po  sv.po  tr.po  uk.po  vi.po  wa.po  zh_CN.po  zh_TW.po
base/gpe-bluetooth/: .cvsignore  ChangeLog  Makefile  Makefile.am  bluez.conf  bnep-helper.c  bnep.c  bnep.h  configure.ac  dbus.c  dun.c  dun.h  gpe-bluetooth.desktop  gpe-bluetooth.desktop.in  gpe-bluetooth.dock  gpe-dist.am  hciattach.sh  headset.c  headset.h  lap.c  lap.h  main.c  main.h  obex-glib.c  obex-glib.h  obex-unknown.c  obex-vcal.c  obex-vcard.c  obexclient-dbus.c  obexclient-file.c  obexclient.c  obexclient.h  obexserver.c  obexserver.h  pan.c  pan.h  pin-dbus.c  pin-ui.c  pin-ui.h  progress.c  (+6 more)
base/gpe-bluetooth/familiar/: control1  postinst
base/gpe-bluetooth/peers/: lap
base/gpe-bluetooth/po/: .cvsignore  POTFILES.in  gpe-bluetooth.pot  nl.po  sv.po  zh_CN.po
base/gpe-buttonbox/: .cvsignore  ChangeLog  Makefile.am  button-box.apps  cfgfile.c  cfgfile.h  configure.ac  globals.h  gpe-buttonbox-config.c  gpe-buttonbox.c  gpe-dist.am  system-tray.c
base/gpe-calculator/: Changelog  Makefile  Makefile.am  calc_basic.c  calc_basic.h  callbacks.c  callbacks.h  configure.ac  display.c  display.h  galculator.h  general_functions.c  general_functions.h  gpe-calculator.desktop  gpe-calculator.desktop.in.in  gpe-calculator.menu  interface.c  interface.h  main.c  math_functions.c  math_functions.h
base/gpe-calendar/: .cvsignore  ChangeLog  Makefile  Makefile.am  README  TODO  about.c  alarm-dialog.c  alarm-dialog.h  autogen.sh  calendar-delete-dialog.c  calendar-delete-dialog.h  calendar-edit-dialog.c  calendar-edit-dialog.h  calendar-update.c  calendar-update.h  calendars-dialog.c  calendars-dialog.h  calendars-widgets.c  calendars-widgets.h  clist_view.c  clist_view.h  configure.ac  control  cotidie.h  day_popup.c  day_popup.h  day_render.c  day_render.h  day_view.c  day_view.h  event-cal.c  event-cal.h  event-db.c  event-db.h  event-list.c  event-list.h  event-menu.c  event-menu.h  event-ui.c  (+36 more)
base/gpe-calendar/po/: cs.po  (+28 more)
base/gpe-conf/: .cvsignore  ARMCOMPILING  ChangeLog  HACKING  Makefile  Makefile.am  Makefile.cross  applets.c  applets.h  appmgr_setup.c  appmgr_setup.h  autogen.sh  battery.c  battery.h  buildmenu.pl  cardinfo.c  cardinfo.h  cfgfile.c  cfgfile.h  configure.ac  control  control1  control1.pre  device.c  device.h  gpe-admin.c  gpe-admin.h  gpe-conf-admin.desktop  gpe-conf-admin.desktop.in  gpe-conf-appmgr.desktop  gpe-conf-battery.desktop  gpe-conf-battery.desktop.in  gpe-conf-cardinfo.desktop  gpe-conf-cardinfo.desktop.in  gpe-conf-ipaqscreen.desktop  gpe-conf-ipaqscreen.desktop.in  gpe-conf-kbd.desktop  gpe-conf-kbd.desktop.in  gpe-conf-keyboard.desktop  gpe-conf-keyboard.desktop.in  (+78 more)
base/gpe-confd/: .cvsignore  ChangeLog  Makefile  Makefile.am  configure.ac  main.c  xsettings-manager.c  xsettings-manager.h
base/gpe-contacts/: .cvsignore  ChangeLog  Makefile  Makefile.am  Makefile.in  aclocal.m4  adb.glade  autogen.sh  callbacks.c  callbacks.h  categories.c  categories.h  config.h.in  configure  configure.ac  configure.c  configure.in  contacts-alternate-bigscreen.xml  contacts-layout-bigscreen.xml  contacts-layout.xml  contacts-tab.conf.de  db.c  db.h  default-layout.xml  edit-vcard.desktop.in  edit-vcard.desktop.in.in  editing.c  evo2gpe.py  export.c  export.h  finddlg.c  finddlg.h  gpe-contacts.1  gpe-contacts.desktop  gpe-contacts.desktop.in  gpe-contacts.desktop.in.in  gpe-contacts.menu  gpe-dist.am  gpe-tp.am  import-vcard.c  (+17 more)
base/gpe-dm/: .cvsignore  ChangeLog  Makefile  Makefile.am  Xinit  Xserver  Xsession  configure.ac  gpe-dm.c  gpe-dm.init
base/gpe-edit/: .cvsignore  ChangeLog  Makefile  Makefile.am  TODO  configure.ac  control  gpe-edit.applications  gpe-edit.desktop  gpe-edit.desktop.in  gpe-edit.desktop.in.in  gpe-edit.menu  gpe-edit.mime  main.c
base/gpe-fbpanel/: .cvsignore  CHANGELOG.fbpanel  ChangeLog  Makefile.am  TODO  autogen.sh  bg.c  config.h  configurator.c  configure.ac  ev.c  fbwin.c  fbwin.h  gtkbar.c  gtkbgbox.c  misc.c  misc.h  panel.c  panel.h  plugin.c  remicons.sh  wins.sh
base/gpe-filemanager/: .cvsignore  ChangeLog  Makefile  Makefile.am  bluetooth.c  bluetooth.h  configure.ac  fileops.c  fileops.h  gpe-dist.am  gpe-filemanager.1  gpe-filemanager.desktop  gpe-filemanager.desktop.in  gpe-filemanager.desktop.in.in  gpe-filemanager.menu  guitools.c  guitools.h  hash.c  main.c  main.h  mime-programs-sql.c  mime-programs-sql.h  mime-sql.c  mime-sql.h  mime.c  mime.h  mime_edit_db.c  update_mime_db.c  update_mime_db.h
base/gpe-hello/: ChangeLog  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  gpe-hello.c  gpe-hello.desktop
base/gpe-helpviewer/: AUTHORS  ChangeLog  Makefile.am  README  TODO  configure.ac  gpe-helpindex.c  gpe-helpviewer.c  gpe-helpviewer.desktop  gpe-helpviewer.html
base/gpe-login/: .cvsignore  99GpeLogin  ChangeLog  Makefile  Makefile.am  configure.ac  control  gpe-dm.c  gpe-dm.init  gpe-lock-display.c  gpe-login-setup  gpe-login.buttons  gpe-login.c  gpe-login.keylaunchrc  gpe-login.session  gpe-login.setup  gpe-login.sysconfig  gpe-login.xinit  gpe-logout.c  gpe-logout.desktop  gpe-tp.am  gpe.xpm  locale.alias  nocursor.c  rootpixmap.c  rootpixmap.h
base/gpe-mileage/: ChangeLog  Makefile.am  autogen.sh  configure.ac  gpe-mileage.desktop.in
base/gpe-mini-browser/: ChangeLog  INSTALL  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  db-backend.c  gpe-dist.am  gpe-mini-browser.c  gpe-mini-browser.desktop  gpe-mini-browser.h  hildon-mini-browser.c  interface-calls.c  loading-calls.c  misc-calls.c  settings.c
(+4892 files in other folders)
